--- a/styles/layout/stage.scss
+++ b/styles/layout/stage.scss
@@ -289,7 +289,7 @@ $portraitAspectRatio: math.div($width, $height);
 }
 
 .inviteModal {
-  .codeWrapper {
+  .inviteCodeWrapper {
     display: flex;
     align-items: center;
     justify-content: center;
