--- a/styles/globals/deviceselector.scss
+++ b/styles/globals/deviceselector.scss
@@ -17,7 +17,7 @@
     bottom: 0;
   }
 
-  @media only screen and (min-width: 600px) and (min-height: 600px) {
+  @include tablet {
     left: 50%;
     width: auto;
     transform: translateX(-50%);
