--- a/styles/globals/sidebar.scss
+++ b/styles/globals/sidebar.scss
@@ -16,7 +16,7 @@
   overflow-y: scroll;
   background-color: var(---grey-1);
 
-  @media only screen and (min-width: 600px) and (min-height: 600px) {
+  @include tablet {
     position: relative;
     width: 88px;
     height: auto;
@@ -38,7 +38,7 @@
     display: flex;
     flex-direction: column;
 
-    @media only screen and (min-width: 600px) and (min-height: 600px) {
+    @include tablet {
       position: fixed;
       top: 0;
       left: 0;
@@ -74,7 +74,7 @@
     width: 100%;
   }
 
-  @media only screen and (min-width: 600px) and (min-height: 600px) {
+  @include tablet {
     .sidebarHeader {
       display: block;
     }
@@ -107,7 +107,7 @@
     outline: none;
     white-space: nowrap;
 
-    @media only screen and (min-width: 600px) and (min-height: 600px) {
+    @include tablet {
       text-align: center;
       flex-direction: column;
       align-items: center;
@@ -116,7 +116,7 @@
     }
 
     span {
-      @media only screen and (min-width: 600px) and (min-height: 600px) {
+      @include tablet {
         transition: all 100ms;
         transform: scaleX(0);
         flex-grow: 1;
@@ -125,7 +125,7 @@
 
     svg {
       margin-right: 16px;
-      @media only screen and (min-width: 600px) and (min-height: 600px) {
+      @include tablet {
         margin-right: 0;
         width: 24px;
         height: 24px;
@@ -141,7 +141,7 @@
     &:hover {
       background-color: var(---grey-3);
 
-      @media only screen and (min-width: 600px) and (min-height: 600px) {
+      @include tablet {
         span {
           transform: none;
         }
@@ -155,7 +155,7 @@
 
     &.selected {
       background-color: var(---primary);
-      @media only screen and (min-width: 600px) and (min-height: 600px) {
+      @include tablet {
         background-color: transparent;
       }
     }
@@ -163,7 +163,7 @@
 }
 
 .sidebarBackdrop {
-  @media only screen and (min-width: 600px) and (min-height: 600px) {
+  @include tablet {
     display: none;
   }
 }
@@ -172,7 +172,7 @@
   position: fixed;
   top: 8px;
   left: 8px;
-  @media only screen and (min-width: 600px) and (min-height: 600px) {
+  @include tablet {
     display: none;
   }
 }
