--- a/styles/layout/chat.scss
+++ b/styles/layout/chat.scss
@@ -83,7 +83,7 @@
     margin-left: 4px;
   }
 
-  @media only screen and (min-width: 600px) and (min-height: 600px) {
+  @include tablet {
     .chatSendButton {
       display: inline-block;
     }
