--- a/ui/styles/container.scss
+++ b/ui/styles/container.scss
@@ -6,7 +6,7 @@
   min-height: 100vh;
   position: relative;
 
-  @media only screen and (min-width: 600px) and (min-height: 600px) {
+  @include tablet {
     padding: 24px 24px 96px;
   }
 
