--- a/ui/styles/index.scss
+++ b/ui/styles/index.scss
@@ -1,3 +1,18 @@
+$tablet-width: 768px !default;
+$desktop-width: 1024px !default;
+
+@mixin tablet {
+  @media (min-width: #{$tablet-width}) {
+    @content;
+  }
+}
+
+@mixin desktop {
+  @media (min-width: #{$desktop-width}) {
+    @content;
+  }
+}
+
 @import "./backdrop";
 @import "./backdrop";
 @import "./button";
