--- a/ui/styles/optionslist.scss
+++ b/ui/styles/optionslist.scss
@@ -15,7 +15,7 @@
     font-weight: bold;
     padding: 8px 4px;
 
-    @media only screen and (min-width: 600px) and (min-height: 600px) {
+    @include tablet {
       padding: 8px 0 8px 16px;
     }
 
@@ -23,7 +23,7 @@
       font-size: 0.8rem;
       font-weight: normal;
       padding: 4px;
-      @media only screen and (min-width: 600px) and (min-height: 600px) {
+      @include tablet {
         padding: 8px 0 8px 32px;
       }
     }
