Added stage member handling

--- a/styles/layout/room.scss
+++ b/styles/layout/room.scss
@@ -46,6 +46,12 @@
     }
   }
 
+  .offlineToggle {
+    position: fixed;
+    top: 48px;
+    right: 8px;
+  }
+
 
   .roomModeSwitch {
     position: absolute;
