Fixed device update and added special firefox fallbacks

--- a/styles/globals/sidebar.scss
+++ b/styles/globals/sidebar.scss
@@ -1,6 +1,8 @@
 /** SIDEBAR **/
 .sidebar {
   position: fixed;
+  top: 0;
+  left: 0;
   display: flex;
   flex-grow: 0;
   flex-shrink: 0;
@@ -13,7 +15,8 @@
   height: 100%;
   max-width: 60vw;
   transform: translateX(-100%);
-  overflow-y: scroll;
+  overflow-x: hidden;
+  overflow-y: auto;
   background-color: var(---grey-1);
 
   @include tablet {
