Removed last piece of css

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -19,6 +19,7 @@ $desktop-width: 1024px !default;
 @import "globals/background";
 @import "globals/deviceselector";
 @import "globals/sidebar";
+@import "globals/profilemenu";
 @import "layout/app";
 @import "layout/auth";
 @import "layout/chat";
