--- a/styles/globals/sidebar.scss
+++ b/styles/globals/sidebar.scss
@@ -51,6 +51,7 @@
     }
   }
 
+
   .sidebarHeader,
   .sidebarBody,
   .sidebarFooter {
@@ -83,9 +84,6 @@
     }
     .sidebarSpacer {
       display: block;
-    }
-    .sidebarBackdrop {
-      display: none;
     }
     .sidebarLogo {
       display: block;
@@ -178,4 +176,18 @@
   @include tablet {
     display: none;
   }
+}
+
+@supports ( -moz-appearance:none ) {
+  // Unfortunately firefox requires this
+  .sidebarBurgerButton {
+    z-index: 800;
+  }
+  .sidebarBackdrop {
+    z-index: 900;
+  }
+  .sidebar {
+    z-index: 1000;
+  }
+  /* Add non-firefox CSS code here */
 }
