--- a/ui/styles/index.scss
+++ b/ui/styles/index.scss
@@ -49,6 +49,7 @@ $desktop-width: 1024px !default;
 @import "./optionslist";
 @import "./topoverlay";
 @import "./panel";
+@import "./radio";
 @import "./select";
 @import "./switch";
 @import "./tag";
