--- a/styles/layout/room.scss
+++ b/styles/layout/room.scss
@@ -25,48 +25,6 @@
   width: 100%;
   height: 100%;
   min-height: 100vh;
-}
-
-.roomEditor {
-  position: relative;
-  width: 100%;
-  height: 100%;
-
-  .roomInner {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: 100%;
-    height: 100%;
-    overflow: scroll;
-
-    canvas {
-      background: url("/room/background.svg") !important;
-    }
-  }
-
-  .roomResetPanel {
-    position: fixed;
-    bottom: 88px;
-    right: 8px;
-    margin-left: 24px;
-
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-
-    button {
-      margin-top: 8px
-    }
-
-    @include tablet {
-      right: 24px;
-      bottom: 24px;
-      margin-left: 0;
-    }
-  }
 
   .offlineToggle {
     position: fixed;
@@ -74,8 +32,28 @@
     right: 8px;
   }
 
+  .resetPanel {
+    position: absolute;
+    bottom: 88px;
+    left: 8px;
+    margin-left: 24px;
 
-  .roomModeSwitch {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
+    button {
+      margin-top: 8px
+    }
+
+    @include tablet {
+      left: 24px;
+      bottom: 24px;
+      margin-left: 0;
+    }
+  }
+
+  .modeSwitch {
     position: absolute;
     top: 52px;
     left: 50%;
@@ -96,5 +74,4 @@
       white-space: nowrap;
     }
   }
-
 }
