--- a/styles/index.scss
+++ b/styles/index.scss
@@ -50,6 +50,7 @@ $desktop-width: 1024px !default;
 @import "layout/room";
 @import "layout/settings";
 @import "layout/stage";
+@import "layout/stage2";
 @import "layout/stages";
 
 html,
