--- a/styles/layout/stage2.scss
+++ b/styles/layout/stage2.scss
@@ -82,6 +82,7 @@
     flex-direction: column;
     flex-grow: 0;
     flex-shrink: 0;
+    background-image: url("/user_background.svg");
 
     .ratio {
       position: relative;
