--- a/styles/layout/stage2.scss
+++ b/styles/layout/stage2.scss
@@ -21,12 +21,16 @@
 
   .colControl {
     position: fixed;
-    bottom: 48px;
+    bottom: 72px;
     right: 8px;
 
     span {
       padding-left: 4px;
       padding-right: 4px;
+    }
+
+    @include tablet {
+      bottom: 48px;
     }
   }
 
@@ -34,44 +38,87 @@
   .group {
     position: relative;
     width: auto;
+    padding: 8px;
     display: flex;
-    flex-direction: row;
-    border-width: 8px;
-    border-style: solid;
-    border-color: transparent;
+    flex-direction: column;
+
+    /* GROUP GRID */
+    .groupGrid {
+      position: relative;
+      width: auto;
+      display: flex;
+      flex-direction: row;
+      border-width: 8px;
+      border-style: solid;
+      border-color: transparent;
+      border-radius: 16px;
+      overflow: hidden;
+      background-color: var(---grey-1);
+      box-shadow: 0 16px 20px #00000040;
+    }
 
     &:not(.lanes) {
-      flex-wrap: wrap;
-      flex-grow: 0;
+      .groupGrid {
+        flex-wrap: wrap;
+        flex-grow: 0;
+      }
     }
 
     &.lanes {
-      overflow-x: visible;
-      height: 100%;
-      flex-wrap: nowrap;
-      flex-grow: 1;
+      .groupGrid {
+        overflow-x: visible;
+        height: 100%;
+        flex-wrap: nowrap;
+        flex-grow: 1;
+      }
     }
 
-    & > .groupName {
-      position: absolute;
-      top: 8px;
-      left: 8px;
-      display: inline-flex;
-      flex-direction: column;
-      width: auto;
-      align-items: center;
+    /* GROUP NAME */
+    & > .groupInfo {
+      position: relative;
+      display: block;
+      padding-left: 4px;
+      padding-right: 4px;
+      flex-grow: 0;
 
-      .groupIcon {
-        display: inline-flex;
-        align-items: center;
-        justify-content: center;
-        color: var(---text);
-        text-align: center;
-        font-size: 32px;
-        width: 64px;
-        height: 64px;
-        border-radius: 50%;
+      & .groupName {
+        position: relative;
+        display: block;
+        width: 100%;
+        font-size: 0.7rem;
+        font-weight: bold;
+        border-bottom-style: solid;
+        border-bottom-width: 2px;
+        padding: 4px;
+
+        .groupIcon {
+          display: none;
+        }
       }
+      /* Overlay, deprecated: */
+      &.usingOverlay {
+        position: absolute;
+        top: 8px;
+        left: 8px;
+        display: inline-flex;
+        flex-direction: column;
+        width: auto;
+        align-items: center;
+        z-index: 1000; // try to order elements instead, this is just for compatibility with new arrangement
+
+        .groupIcon {
+          display: inline-flex;
+          align-items: center;
+          justify-content: center;
+          color: var(---text);
+          text-align: center;
+          font-size: 32px;
+          width: 64px;
+          height: 64px;
+          border-radius: 50%;
+        }
+      }
+      /* end of deprecated overlay */
     }
   }
 
