--- a/ui/styles/index.scss
+++ b/ui/styles/index.scss
@@ -40,6 +40,7 @@ $desktop-width: 1024px !default;
 @import "./button";
 @import "./collapse";
 @import "./container";
+@import "./heading";
 @import "./headline-button";
 @import "./input";
 @import "./list";
@@ -49,6 +50,7 @@ $desktop-width: 1024px !default;
 @import "./optionslist";
 @import "./topoverlay";
 @import "./panel";
+@import "./paragraph";
 @import "./radio";
 @import "./select";
 @import "./switch";
