--- a/styles/layout/stage2.scss
+++ b/styles/layout/stage2.scss
@@ -1,44 +1,13 @@
 .stageGrid {
   display: flex;
+  flex-direction: column;
+  width: 100%;
   min-height: 100%;
-
-
-  &:not(.lanes) {
-    width: 100%;
-    flex-direction: column;
-  }
-
-  &.lanes {
-    width: auto;
-    flex-direction: row;
-    overflow-x: scroll;
-    padding-bottom: 64px;
-    max-height: 100vh;
-
-    @include tablet {
-      padding-bottom: 0;
-    }
-  }
 
   .control {
     position: fixed;
-    top: 48px;
-    right: 8px;
-  }
-
-  .colControl {
-    position: fixed;
-    bottom: 72px;
-    right: 8px;
-
-    span {
-      padding-left: 4px;
-      padding-right: 4px;
-    }
-
-    @include tablet {
-      bottom: 48px;
-    }
+    top: 8px;
+    right: 48px;
   }
 
   /* Group representation */
@@ -62,27 +31,14 @@
       overflow: hidden;
       background-color: var(---grey-1);
       box-shadow: 0 16px 20px #00000040;
+      // Non lane mode
+      flex-wrap: wrap;
+      flex-grow: 0;
     }
 
     &.single {
       border-width: 0;
       border-color: transparent;
-    }
-
-    &:not(.lanes) {
-      .groupGrid {
-        flex-wrap: wrap;
-        flex-grow: 0;
-      }
-    }
-
-    &.lanes {
-      .groupGrid {
-        overflow-x: visible;
-        height: 100%;
-        flex-wrap: nowrap;
-        flex-grow: 1;
-      }
     }
 
     /* GROUP NAME */
@@ -272,6 +228,31 @@
           padding-left: 2px;
           padding-right: 2px;
         }
+      }
+    }
+  }
+
+  &.lanes {
+    width: auto;
+    flex-direction: row;
+    overflow-x: auto;
+    padding-bottom: 64px;
+    max-height: 100vh;
+
+    @include tablet {
+      padding-bottom: 0;
+    }
+
+    .group {
+      flex-wrap: nowrap;
+      flex-grow: 1;
+
+      .groupGrid {
+        overflow-x: auto;
+        height: 100%;
+        flex-wrap: nowrap;
+        flex-grow: 1;
+
       }
     }
   }
